// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected (reference items) 1`] = `
<Accordion
  expanded={false}
  left={[Function]}
  onPress={[Function]}
  title="Reference settings"
>
  <ListItem
    containerStyle={
      Object {
        "paddingVertical": 8,
      }
    }
    onPress={[Function]}
    title="Expand all items"
  />
  <ListItem
    containerStyle={
      Object {
        "paddingVertical": 8,
      }
    }
    onPress={[Function]}
    title="Collapse all items"
  />
</Accordion>
`;

exports[`renders as expected (root) 1`] = `
<Fragment>
  <TimerItems
    currRouteName="mockRoute"
    navigateToRoute={[Function]}
  />
  <SuggestionsItems
    currRouteName="mockRoute"
    navigateToRoute={[Function]}
  />
  <ReferenceItems
    currRouteName="mockRoute"
    navigateToRoute={[Function]}
  />
</Fragment>
`;

exports[`renders as expected (route items) 1`] = `
<Accordion
  left={[Function]}
  title="Routes"
>
  <DrawerItems />
</Accordion>
`;

exports[`renders as expected (suggestions items) 1`] = `
<Accordion
  expanded={false}
  left={[Function]}
  onPress={[Function]}
  title="Suggestions settings"
>
  <ListItem
    description="Using the interval defined below.
Currently OFF"
    onPress={[Function]}
    title="Auto-suggest"
  />
  <ListItem
    description="Currently 10 seconds"
    onPress={[Function]}
    title="Auto-suggest interval"
  />
</Accordion>
`;

exports[`renders as expected (timer items) 1`] = `
<Accordion
  expanded={false}
  left={[Function]}
  onPress={[Function]}
  title="Timer settings"
>
  <ListItem
    description="Currently ON"
    onPress={[Function]}
    title="Increase screen brightness while timer is running"
  />
</Accordion>
`;
